manifests/market-data-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  labels:
    name: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: tingwai/market_data_frontend:0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
