manifests/websocket-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  labels:
    app: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: websocket-consumer
        image: tingwai/websocket_consumer:0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
