manifests/redis-stack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "redis-stack"
  namespace: default
  labels:
    app: "redis-stack"
spec:
  ports:
  - port: 6379
    name: "redis-stack"
    targetPort: 6379
  - port: 8001
    name: "redis-insight"
    targetPort: 8001
  type: NodePort
  selector:
    app: "redis-stack"
